# Py_WEB_07

./: .env  .gitignore  README.md  alembic.ini  config.ini  pyproject.toml  run_postgres.py  run_postgres.sh  seed.py
alembic/: env.py
alembic/versions/: 594e7abe3ea6_create_teacher_table.py  d0145f78abd1_create_users_models.py
migration/: env.py
src/: cli_app.py  crud_db.py  main.py  my_select.py  run_migration.py  seed.py  web_app.py
src/models/: db.py  models.py  tables.py
src/seed/: grades.py  groups.py  seed.py  students.py  subjects.py  teachers.py
