[tool.poetry]
name = "alembic-sqlaqlchemy-tutorial"
version = "0.1.0"
description = ""
authors = ["Serghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
